--- a/src/index.css
+++ b/src/index.css
@@ -37,16 +37,14 @@ code {
 }
 .friendlist {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  overflow-x: hidden;
+  align-items: center;
 }
 
 .friendcard {
   display: grid;
-  width: 100%;
+  width: 98%;
   height: 60px;
   grid-template-columns: 80% 1fr;
   grid-template-rows: 50% 50%;
@@ -60,7 +58,6 @@ code {
 
 .addfriend {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,4 +77,20 @@ code {
   border: 4px solid rgb(153, 110, 67);
   background-color: rgb(180, 135, 73);
   border-bottom: 4px solid rgb(118, 87, 38);
+}
+
+.addfriend button {
+  height: 40px;
+  width: 170px;
+  border-radius: 2px;
+  border: 4px solid rgb(195, 142, 89);
+  background-color: rgb(215, 163, 90);
+  border-bottom: 4px solid rgb(155, 117, 55);
+  margin-top: 10px;
+}
+
+.addfriendselection {
+  width: 100%;
+  margin-top: 5px;
+  background-color: green;
 }
