--- a/src/index.css
+++ b/src/index.css
@@ -88,9 +88,48 @@ code {
   border-bottom: 4px solid rgb(155, 117, 55);
   margin-top: 10px;
 }
+.addfriend button:active {
+  border: 4px solid rgb(161, 114, 67);
+  background-color: rgb(207, 150, 70);
+  border-bottom: 4px solid rgb(102, 77, 37);
+}
 
 .addfriendselection {
   width: 100%;
   margin-top: 5px;
   background-color: green;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.addfriendform {
+  background-color: antiquewhite;
+  border: 0px solid;
+  border-radius: 4px;
+  height: 30px;
+  width: 200px;
+  padding-left: 10px;
+  border-bottom: 2px solid rgb(165, 116, 42);
+}
+
+.addfriendform::placeholder {
+  color: rgb(157, 122, 77);
+}
+
+.addfriendselection button {
+  height: 30px;
+  width: 70px;
+  border-radius: 2px;
+  border: 4px solid rgb(195, 142, 89);
+  background-color: rgb(215, 163, 90);
+  border-bottom: 4px solid rgb(155, 117, 55);
+  margin-left: 10px;
+}
+
+.addfriendselection button:active {
+  border: 4px solid rgb(161, 114, 67);
+  background-color: rgb(207, 150, 70);
+  border-bottom: 4px solid rgb(102, 77, 37);
 }
